--- a/mk-base/pom.xml
+++ b/mk-base/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>mk-user</artifactId>
+    <artifactId>mk-base</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -25,7 +25,10 @@
             <artifactId>mk-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
