[更新] 修复添加微服务短信发送模块

--- a/mk-gateway/src/main/resources/application.yaml
+++ b/mk-gateway/src/main/resources/application.yaml
@@ -22,12 +22,20 @@ spring:
               - DELETE
       routes:
         # 平台管理
-        - id: wemedia
+        - id: mk-user
           uri: lb://mk-user
           predicates:
             - Path=/mkuser/** #判断匹配条件,即地址带有/user/**的请求,会转发至lb:mk-user
           filters:
             - StripPrefix= 1 #去掉Path前缀,参数为1代表去掉/user
+              # 平台管理
+        - id: mk-other
+          uri: lb://mk-other
+          predicates:
+            - Path=/mkother/** #判断匹配条件,即地址带有/user/**的请求,会转发至lb:mk-user
+          filters:
+            - StripPrefix= 1 #去掉Path前缀,参数为1代表去掉/user
+
 logging:
   level:
     org:
