[更新] 完成文章的保存

--- a/mk-common/pom.xml
+++ b/mk-common/pom.xml
@@ -114,5 +114,9 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+        </dependency>
     </dependencies>
 </project>
