--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         <validation-api.version>2.0.1.Final</validation-api.version>
         <aspectjweaver.version>1.9.2</aspectjweaver.version>
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
+        <druid.version>1.1.16</druid.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -129,6 +130,11 @@
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-extension</artifactId>
                 <version>${mybatis.plus.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${druid.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
