--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <aspectjweaver.version>1.9.2</aspectjweaver.version>
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
         <druid.version>1.1.16</druid.version>
+        <redis-pool>2.6.2</redis-pool>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -70,7 +71,11 @@
                 <artifactId>jjwt</artifactId>
                 <version>${jjwt-version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
+                <version>${redis-pool}</version>
+            </dependency>
             <!-- fastjson -->
             <dependency>
                 <groupId>com.alibaba</groupId>
