--- a/mk-user/pom.xml
+++ b/mk-user/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>mk-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 
 </project>
