--- a/mk-base/src/main/resources/application.yaml
+++ b/mk-base/src/main/resources/application.yaml
@@ -2,3 +2,13 @@ spring:
   elasticsearch:
     rest:
       uris: http://124.223.65.85:9200
+xxl:
+  job:
+    admin:
+      addresses: http://localhost:12700/xxl-job-admin
+    executor:
+      ip:
+      port: 9999
+      logpath: /data/applogs/xxl-job/jobhandler
+      appname: base-job
+      logRetentionDays: 30
