--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
         <druid.version>1.1.16</druid.version>
         <redis-pool>2.6.2</redis-pool>
+        <xxljob.version>2.3.0</xxljob.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -140,6 +141,11 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid</artifactId>
                 <version>${druid.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.xuxueli</groupId>
+                <artifactId>xxl-job-core</artifactId>
+                <version>${xxljob.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
