[更新] 完成kafka 的搭建以及记录

--- a/mk-base/src/main/resources/application.yaml
+++ b/mk-base/src/main/resources/application.yaml
@@ -2,6 +2,17 @@ spring:
   elasticsearch:
     rest:
       uris: http://124.223.65.85:9200
+  kafka:
+    # 消费者
+    consumer:
+      group-id: mkcloud
+      auto-offset-reset: earliest
+      bootstrap-servers: 124.223.65.85:9092
+    # 生产者
+    producer:
+      bootstrap-servers: 124.223.65.85:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
 xxl:
   job:
     admin:
@@ -12,3 +23,7 @@ xxl:
       logpath: /data/applogs/xxl-job/jobhandler
       appname: base-job
       logRetentionDays: 30
+
+
+
+
