--- a/mk-other/src/main/resources/application.yaml
+++ b/mk-other/src/main/resources/application.yaml
@@ -29,7 +29,16 @@ spring:
       bootstrap-servers: 124.223.65.85:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
-
+xxl:
+  job:
+    admin:
+      addresses: http://localhost:12700/xxl-job-admin
+    executor:
+      ip:
+      port: 9998
+      logpath: /data/applogs/xxl-job/jobhandler
+      appname: other-job
+      logRetentionDays: 30
 
 
 
