--- a/mk-user/src/main/resources/application.yaml
+++ b/mk-user/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
-xxl:
-  job:
-    admin:
-      addresses: http://localhost:12700/xxl-job-admin
-    executor:
-      ip:
-      port: 9997
-      logpath: /data/applogs/xxl-job/jobhandler
-      appname: user-job
-      logRetentionDays: 30
+#xxl:
+#  job:
+#    admin:
+#      addresses: http://localhost:12700/xxl-job-admin
+#    executor:
+#      ip:
+#      port: 9997
+#      logpath: /data/applogs/xxl-job/jobhandler
+#      appname: user-job
+#      logRetentionDays: 30
