--- a/mk-user/pom.xml
+++ b/mk-user/pom.xml
@@ -27,5 +27,12 @@
             <version>1.4</version>
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
