[更新] 完善数据报表展示

--- a/mk-common/pom.xml
+++ b/mk-common/pom.xml
@@ -134,6 +134,10 @@
             <groupId>com.xuxueli</groupId>
             <artifactId>xxl-job-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.houbb</groupId>
+            <artifactId>sensitive-word</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
