--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,8 @@
         <redis-pool>2.6.2</redis-pool>
         <xxljob.version>2.3.0</xxljob.version>
         <sensitive.version>0.0.4</sensitive.version>
+        <seata.version>1.4.2</seata.version>
+        <alibab.seata.version>2.2.7.RELEASE</alibab.seata.version>
 <!--        <kafka.version>2.2.6.RELEASE</kafka.version>-->
 <!--        <kafka.clients.version>2.1.0</kafka.clients.version>-->
     </properties>
@@ -154,6 +156,22 @@
                 <groupId>com.github.houbb</groupId>
                 <artifactId>sensitive-word</artifactId>
                 <version>${sensitive.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+                <version>${alibab.seata.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>seata-all</artifactId>
+                        <groupId>io.seata</groupId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>io.seata</groupId>
+                <artifactId>seata-all</artifactId>
+                <version>${seata.version}</version>
             </dependency>
         <!--    <dependency>
                 <groupId>org.springframework.kafka</groupId>
