--- a/mk-other/src/main/resources/application.yaml
+++ b/mk-other/src/main/resources/application.yaml
@@ -1,23 +1,18 @@
 #server:
 #  port: 11302
 #spring:
+#  servlet:
+#    multipart:
+#      enabled: true
+#      location: /data/upload_file
+#      file-size-threshold: 0B
+#      max-file-size: 30MB
+#      max-request-size: 30MB
 #  datasource:
 #    driver-class-name: org.postgresql.Driver
-#    url: jdbc:postgresql://47.103.216.189:5432/mk-cloud?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
+#    url: jdbc:postgresql://47.103.216.189:5432/mk-cloud?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai&useSSL=false
 #    username: postgres
 #    password: '@Lzy2018.cn'
-#  cloud:
-#    nacos:
-#      discovery:
-#        server-addr: 47.103.216.189:8848
-#        namespace: 3908062f-c0bb-426d-8081-589594521b36
-#      config:
-#        max-retry: 0
-#  redis:
-#    host: 47.103.216.189
-#    port: 6379
-#    password: '@Lzy2018.cn'
-#    timeout: 30000
 #  kafka:
 #    # 消费者
 #    consumer:
@@ -29,6 +24,57 @@
 #      bootstrap-servers: 124.223.65.85:9092
 #      key-serializer: org.apache.kafka.common.serialization.StringSerializer
 #      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+#  cloud:
+#    nacos:
+#      discovery:
+#        server-addr: 47.103.216.189:8848
+#        namespace: 3908062f-c0bb-426d-8081-589594521b36
+#  redis:
+#    host: 47.103.216.189
+#    port: 6379
+#    password: '@Lzy2018.cn'
+#    timeout: 30000
+#
+## 设置Mapper接口所对应的XML文件位置，如果你在Mapper接口中有自定义方法，需要进行该配置
+#mybatis-plus:
+#  mapper-locations: classpath*:mapper/*.xml
+#  # 设置别名包扫描路径，通过该属性可以给包中的类注册别名
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+#  # 逻辑删除
+#  global-config:
+#    db-config:
+#      logic-delete-field: deleted # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
+#      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
+#      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
+##knife4j整合配置
+#knife4j:
+#  enableAggregation: false
+#  nacos:
+#    enable: false
+#    serviceUrl: http://localhost:10000/nacos/
+#    routeAuth:
+#      enable: true
+#      username: test
+#      password: 12313
+#    routes:
+#      - name: 订单服务
+#        serviceName: service-order
+#        location: /v2/api-docs?group=default
+#        swaggerVersion: 2.0
+#        servicePath: /order
+#        routeAuth:
+#          enable: true
+#          username: test
+#          password: 12313
+##redis前缀配置
+#Email:
+#  checkCode: mkcloud_
+##log4j2配置
+#logging:
+#  config: classpath:log4j2.xml
+#Jwt:
+#  key: MkCloudAuth
 #xxl:
 #  job:
 #    admin:
@@ -39,7 +85,26 @@
 #      logpath: /data/applogs/xxl-job/jobhandler
 #      appname: other-job
 #      logRetentionDays: 30
-#
-#
-#
-
+#feign:
+#  hystrix:
+#    enabled: true
+#  httpclient:
+#    enabled: true
+#    connection-timeout: 5000
+#    max-connections: 5000
+#    max-connections-per-route: 100
+## seata 配置
+#feign:
+#  hystrix:
+#    enabled: true
+#  httpclient:
+#    enabled: true
+#    connection-timeout: 60000
+#    max-connections: 60000
+#    max-connections-per-route: 100
+seata:
+  enabled: true
+  tx-service-group: my-tx-group
+  service:
+    vgroup-mapping.my-tx-group: seata-server
+    grouplist.seata-server: 192.168.1.8:8091
