--- a/mk-other/src/main/resources/application.yaml
+++ b/mk-other/src/main/resources/application.yaml
@@ -102,9 +102,9 @@
 #    connection-timeout: 60000
 #    max-connections: 60000
 #    max-connections-per-route: 100
-seata:
-  enabled: true
-  tx-service-group: my-tx-group
-  service:
-    vgroup-mapping.my-tx-group: seata-server
-    grouplist.seata-server: 192.168.1.8:8091
+#seata:
+#  enabled: true
+#  tx-service-group: my-tx-group
+#  service:
+#    vgroup-mapping.my-tx-group: seata-server
+#    grouplist.seata-server: 192.168.1.8:8091
